# mail-forwarder

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml  config.toml
.github/workflows/: ghcr.yml
src/: config.rs  imap_receiver.rs  main.rs  notifications.rs  pop3_receiver.rs  pop3_receiver_tests.rs  smtp_sender.rs  smtp_sender_tests.rs  traits.rs
